--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
-.org-id-locations
-ac-comphist.dat
-bookmarks
-cookies
-places
-.cider-history
-.emacs-places
-.ido.last
-.smex-items
-/emacs-installation/.lein/self-installs
+emacs-installation/.cider-history
+emacs-installation/.emacs-places
+emacs-installation/.emacs.d/ac-comphist.dat
+emacs-installation/.ido.last
+emacs-installation/.smex-items
+emacs-installation/.lein/self-installs/leiningen-2.3.4-standalone.jar
