--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ emacs-installation/.ido.last
 emacs-installation/.smex-items
 emacs-installation/.emacs-places
 emacs-installation/.emacs.d/ac-comphist.dat
+emacs-installation/.lein/self-installs/leiningen-2.3.4-standalone.jar
