--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ emacs-installation/.emacs-places
 emacs-installation/.emacs.d/ac-comphist.dat
 emacs-installation/.emacs.d/auto-save-list/
 emacs-installation/.emacs.d/eshell/
-emacs-installation/.emacs.d/.ido.last
+emacs-installation/.emacs.d/ido.last
 emacs-installation/.emacs.d/places
 emacs-installation/.emacs.d/projectile-bookmarks.eld
 emacs-installation/.emacs.d/projectile.cache
