--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ emacs-installation/.smex-items
 emacs-installation/.emacs-places
 emacs-installation/.emacs.d/ac-comphist.dat
 emacs-installation/.emacs.d/auto-save-list/
+emacs-installation/.emacs.d/elpa/archives/
 emacs-installation/.emacs.d/elpa/gnupg/
 emacs-installation/.emacs.d/eshell/
 emacs-installation/.emacs.d/ido.last
