Add logview-cache.extmap to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ emacs-installation/.emacs.d/projectile-bookmarks.eld
 emacs-installation/.emacs.d/projectile.cache
 emacs-installation/.emacs.d/server/
 emacs-installation/.gnupg/
+emacs-installation/.emacs.d/logview-cache.extmap
