--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,21 @@
-emacs-installation/.cider-history
-emacs-installation/.ido.last
-emacs-installation/.smex-items
-emacs-installation/.emacs-places
-emacs-installation/.emacs.d/ac-comphist.dat
-emacs-installation/.emacs.d/auto-save-list/
-emacs-installation/.emacs.d/elpa/archives/
-emacs-installation/.emacs.d/elpa/gnupg/
-emacs-installation/.emacs.d/eshell/
-emacs-installation/.emacs.d/ido.last
-emacs-installation/.emacs.d/places
-emacs-installation/.emacs.d/projectile-bookmarks.eld
-emacs-installation/.emacs.d/projectile.cache
-emacs-installation/.emacs.d/server/
-emacs-installation/.gnupg/
-emacs-installation/.emacs.d/logview-cache.extmap
-emacs-installation/.emacs.d/transient/
-emacs-installation/.emacs.d/.lsp-session-v1
+emacs-configuration/emacs-installation/.cider-history
+emacs-configuration/emacs-installation/.ido.last
+emacs-configuration/emacs-installation/.smex-items
+emacs-configuration/emacs-installation/.emacs-places
+emacs-configuration/emacs-installation/.emacs.d/ac-comphist.dat
+emacs-configuration/emacs-installation/.emacs.d/auto-save-list/
+emacs-configuration/emacs-installation/.emacs.d/elpa/archives/
+emacs-configuration/emacs-installation/.emacs.d/elpa/gnupg/
+emacs-configuration/emacs-installation/.emacs.d/eshell/
+emacs-configuration/emacs-installation/.emacs.d/ido.last
+emacs-configuration/emacs-installation/.emacs.d/places
+emacs-configuration/emacs-installation/.emacs.d/projectile-bookmarks.eld
+emacs-configuration/emacs-installation/.emacs.d/projectile.cache
+emacs-configuration/emacs-installation/.emacs.d/server/
+emacs-configuration/emacs-installation/.gnupg/
+emacs-configuration/emacs-installation/.emacs.d/logview-cache.extmap
+emacs-configuration/emacs-installation/.emacs.d/transient/
+emacs-configuration/emacs-installation/.emacs.d/.lsp-session-v1
 
 # To get vterm to work on a new machine:
 # - delete the following things (the ignored things after this comment)
@@ -25,5 +25,5 @@ emacs-installation/.emacs.d/.lsp-session-v1
 # (The following things have version numbers of cmake and its dependencies baked
 # into them, and if they don't exist on the new machine things won't work -- I
 # saw Emacs crashing after I copied Emacs config from one machine to another.)
-emacs-installation/.emacs.d/elpa/vterm-20210804.405/build/
-emacs-installation/.emacs.d/elpa/vterm-20210804.405/vterm-module.so
+emacs-configuration/emacs-installation/.emacs.d/elpa/vterm-20210804.405/build/
+emacs-configuration/emacs-installation/.emacs.d/elpa/vterm-20210804.405/vterm-module.so
