--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ emacs-configuration/emacs-installation/.emacs.d/logview-cache.extmap
 emacs-configuration/emacs-installation/.emacs.d/transient/
 emacs-configuration/emacs-installation/.emacs.d/.lsp-session-v1
 
+.nomis-space-debug
+
 # To get vterm to work on a new machine:
 # - delete the following things (the ignored things after this comment)
 # - restart Emacs
