Hammerspoon: Add `nomisMessage`

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ emacs-configuration/emacs-installation/.emacs.d/.lsp-session-v1
 
 .nomis-space-debug
 hammerspoon.log
+hammerspoon-messages.log
 
 # To get vterm to work on a new machine:
 #
