--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ emacs-configuration/emacs-installation/.emacs.d/.cache
 emacs-configuration/emacs-installation/.emacs.d/logview-cache.extmap
 emacs-configuration/emacs-installation/.emacs.d/transient/
 emacs-configuration/emacs-installation/.emacs.d/.lsp-session-v1
+emacs-configuration/emacs-installation/.emacs.d/tldr/
 
 .nomis-space-debug
 hammerspoon.log
