--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ emacs-configuration/emacs-installation/.emacs.d/elpa/archives/
 emacs-configuration/emacs-installation/.emacs.d/elpa/gnupg/
 emacs-configuration/emacs-installation/.emacs.d/eshell/
 emacs-configuration/emacs-installation/.emacs.d/ido.last
+emacs-configuration/emacs-installation/.emacs.d/inferior-ielm-history
 emacs-configuration/emacs-installation/.emacs.d/places
 emacs-configuration/emacs-installation/.emacs.d/projectile-bookmarks.eld
 emacs-configuration/emacs-installation/.emacs.d/projectile.cache
