Add .emacs.d/eca/ to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ emacs-configuration/emacs-installation/.smex-items
 emacs-configuration/emacs-installation/.emacs-places
 emacs-configuration/emacs-installation/.emacs.d/ac-comphist.dat
 emacs-configuration/emacs-installation/.emacs.d/auto-save-list/
+emacs-configuration/emacs-installation/.emacs.d/eca/
 emacs-configuration/emacs-installation/.emacs.d/elpa/archives/
 emacs-configuration/emacs-installation/.emacs.d/elpa/gnupg/
 emacs-configuration/emacs-installation/.emacs.d/eshell/
